# RedditDashboardProfessional

./: .dockerfile  .gitignore  dask_report.html  limitedZSTgenerator.py  pyproject.toml  requirements.txt  run_pipeline.py  tester222.py
api/: main.py
dashboards/streamlit/: app.py
data/parquet_raw/subreddit=politics/_date=2024-11-01/: 0699f468a1da4ea3a945bfc2bbea7688-0.parquet
data/parquet_raw/subreddit=politics/_date=2024-11-03/: 96b65c598043474a9ce771c96361ec44-0.parquet
data/parquet_raw/subreddit=politics/_date=2024-11-04/: 14ca0e1ea61c452ba7f259151cf2d6e6-0.parquet  4dd66c4ae6ff423eb345f6a39c7fe941-0.parquet
data/parquet_raw/subreddit=politics/_date=2024-11-05/: 840b3d7766054d4bbdaed180edbc7f44-0.parquet
data/parquet_raw/subreddit=politics/_date=2024-11-06/: 840b3d7766054d4bbdaed180edbc7f44-0.parquet  e02535e5beb841c78b5c036739a22009-0.parquet
data/parquet_raw/subreddit=politics/_date=2024-11-08/: b8216797c3ff4dfe828d6fe12c0cb526-0.parquet  d3e2a79bbb0e47eb88adf3134defbb13-0.parquet
data/parquet_raw/subreddit=politics/_date=2024-11-10/: 3527b48677ca45b18a387d2e24353b21-0.parquet  43834a4610b84ca486729ae3a3ed1ee4-0.parquet
data/parquet_raw/subreddit=politics/_date=2024-11-13/: ac09725bb24747219564ecb0b0226085-0.parquet
nlp_core/: cleaning.py  embeddings.py  emotion.py  io.py  polarization.py  sarcasm.py  sentiment.py  spacy_pipe.py  stance.py  tester.py  topic.py
scripts/: run_pipeline.py
tests/: tests_cleaning.py  tests_emotion.py  tests_io.py  tests_polarization.py  tests_sentiment.py  tests_spacy_pipe.py
(+2 files in other folders)
